tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/instanceip/localhost_IP_with_wildcard_sidecar/_test_context/Sidecar.766414403.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-60257
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 0.0.0.0:18084
    port:
      number: 18084
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
